force-app/main/default/objects/Contract_Status_History__c/Contract_Status_History__c.object-meta.xml
<CustomObject>
    <label>Contract Status History</label>
    <nameField>
        <displayFormat>CSHID-{000000000}</displayFormat>
        <label>Contract Status History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Status History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>