force-app/main/default/objects/Contract_Status_History__c/fields/CID_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>CID_Request_Date__c</fullName>
    <label>CID Request Date</label>
    <type>DateTime</type>
</CustomField>