force-app/main/default/objects/Contract_Status_History__c/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Status_History</relationshipName>
    <type>Lookup</type>
</CustomField>