force-app/main/default/objects/Contract_Status_History__c/fields/Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>