force-app/main/default/objects/Contract_Status_History__c/fields/Status_Change_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Date_Time__c</fullName>
    <label>Status Change Date/Time</label>
    <type>DateTime</type>
</CustomField>