force-app/main/default/objects/Contract_Status_History__c/fields/X2nd_Resubmission_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Resubmission_Date_Time__c</fullName>
    <label>2nd Resubmission Date/Time</label>
    <type>DateTime</type>
</CustomField>